# rust_fantasy_finance

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  postman_collection.json
.github/actions/version/: action.yml
.github/workflows/: docker.yml  test.yml
data/abbs/: orders.parquet
data/market/AAPL/: prices.parquet
src/: activities.rs  activity.rs  error.rs  holdings.rs  holdings_service.rs  main.rs  market.rs  portfolio.rs  state.rs  strava.rs
