[package]
name = "rust_fantasy_finance"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow-array = "55.1"
arrow-schema = "55.1"
parquet = "55.1"
thiserror = "1"
anyhow = "1"
yahoo_finance_api = "4"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
